Links bugs fixed home page

--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 <body>
 
   <div class="navbar" id="nav">
-    <a href="http://127.0.0.1:5500/Project/home.html" target="_blank"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="http://127.0.0.1:5500/Project/PR%20about.html"><i class="fa fa-fw fa-envelope"></i> About</a>
+    <a href="index.html" target="_blank"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="PR about.html"><i class="fa fa-fw fa-envelope"></i> About</a>
 
     <div class="dropdown">
       <button class="dropbtn">Categories
@@ -318,41 +318,41 @@
         <div class="row">
           <div class="column">
             <h3>Fashion</h3>
-            <a href="http://127.0.0.1:5500/Project/prod.html#kids">Kids</a>
-            <a href="http://127.0.0.1:5500/Project/prod.html#men">Men</a>
-            <a href="http://127.0.0.1:5500/Project/prod.html#women">Women</a>
+            <a href="prod.html#kids">Kids</a>
+            <a href="prod.html#men">Men</a>
+            <a href="prod.html#women">Women</a>
           </div>
           <div class="column">
             <h3>Electronics</h3>
-            <a href="http://127.0.0.1:5500/Project/prod.html#mob">Mobiles</a>
-            <a href="http://127.0.0.1:5500/Project/error.html">Tablets</a>
-            <a href="http://127.0.0.1:5500/Project/prod.html#lap">Laptops</a>
+            <a href="prod.html#mob">Mobiles</a>
+            <a href="error.html">Tablets</a>
+            <a href="prod.html#lap">Laptops</a>
           </div>
           <div class="column">
             <h3>Home</h3>
-            <a href="http://127.0.0.1:5500/Project/error.html">Grocery</a>
-            <a href="http://127.0.0.1:5500/Project/error.html">Kitchen</a>
-            <a href="http://127.0.0.1:5500/Project/error.html">Furniture</a>
+            <a href="error.html">Grocery</a>
+            <a href="error.html">Kitchen</a>
+            <a href="error.html">Furniture</a>
           </div>
           <div class="column">
             <h3>Appliances</h3>
-            <a href="http://127.0.0.1:5500/Project/prod.html#tv">TV & Speakers</a>
-            <a href="http://127.0.0.1:5500/Project/error.html">Winter Appliances</a>
-            <a href="http://127.0.0.1:5500/Project/error.html">Summer Aplliances</a>
+            <a href="prod.html#tv">TV & Speakers</a>
+            <a href="error.html">Winter Appliances</a>
+            <a href="error.html">Summer Aplliances</a>
           </div>
           <div class="column">
             <h3>Footwear</h3>
-            <a href="http://127.0.0.1:5500/Project/prod.html#ft">Kids</a>
-            <a href="http://127.0.0.1:5500/Project/prod.html#ft">Men</a>
-            <a href="http://127.0.0.1:5500/Project/prod.html#ft">Women</a>
+            <a href="prod.html#ft">Kids</a>
+            <a href="prod.html#ft">Men</a>
+            <a href="prod.html#ft">Women</a>
           </div>
         </div>
       </div>
     </div>
-    <a href="http://127.0.0.1:5500/Project/disc%20coupons.html"><i class="fa fa-fw fa-star"></i><i
+    <a href="disc coupons.html"><i class="fa fa-fw fa-star"></i><i
         class="fa fa-fw fa-rupee"></i> Top Offers</a>
-    <a href="http://127.0.0.1:5500/Project/coming.html"><i class="fa fa-fw fa-plus"></i>ONS Plus</a>
-    <a href="http://127.0.0.1:5500/Project/PR-contact.html"><i class="fa fa-fw fa-phone"></i> Contact</a>
+    <a href="coming.html"><i class="fa fa-fw fa-plus"></i>ONS Plus</a>
+    <a href="PR-contact.html"><i class="fa fa-fw fa-phone"></i> Contact</a>
 
     <input type="text" placeholder="Search..">
     <button class="b" type="submit"><i class="fa fa-search"></i></button>
@@ -366,8 +366,8 @@
   <div class="drpdwn">
     <a href="" class="acc"><i class="fa fa-fw fa-user"></i></a>
     <div class="drp-cnt">
-      <a href="http://127.0.0.1:5500/Project/login.html" target="_blank">Log In</a>
-      <a href="http://127.0.0.1:5500/Project/register.html" target="_blank">Sign Up</a>
+      <a href="login.html" target="_blank">Log In</a>
+      <a href="register.html" target="_blank">Sign Up</a>
     </div>
   </div>
 
@@ -448,7 +448,7 @@
 
   <div class="cpyri8">
     <p><b>All rights Reserved by One Stop ShopIn<br></b> <span>Copyright@2022</span></p>
-    <a class="pp" href="http://127.0.0.1:5500/Project/pr-privacy.html"> Privacy Policy</a>
+    <a class="pp" href="pr-privacy.html"> Privacy Policy</a>
   </div>
 
 </body>
