--- a/PR about.html
+++ b/PR about.html
@@ -629,10 +629,10 @@
 
 
   <div id="navbar">
-    <a href="http://127.0.0.1:5500/Project/home.html" target="_blank"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="index.html" target="_blank"><i class="fa fa-fw fa-home"></i> Home</a>
     <a href="#team"><i class="fa fa-fw fa-user"></i> Our Team</a>
     <a href="#r2"><i class="fa fa-fw fa-star"></i> Top Features</a>
-    <a href="http://127.0.0.1:5500/Project/PR-contact.html" target="_blank"><i class="fa fa-fw fa-phone"></i>
+    <a href="PR-contact.html" target="_blank"><i class="fa fa-fw fa-phone"></i>
       Contact</a>
   </div>
 
@@ -653,10 +653,10 @@
       <div class="card">
         <img src="2.jpg" style="width:55%" height="350px">
         <div class="cont">
-          <h2>Susneha Priyadarshini</h2>
+          <h2>Mayank Kumar</h2>
           <p class="title">CEO & Founder</p>
-          <p>AGE : 19 Yrs / Female</p>
-          <p>susneha07priyadarshini@gmail.com</p>
+          <p>AGE : 21 Yrs / Male</p>
+          <p>mk8787kr@gmail.com</p>
           <h6>
             <p>Know More</p>
           </h6>
@@ -672,7 +672,7 @@
         <div class="cont">
           <h2>Mayank Kumar</h2>
           <p class="title">Managing Director</p>
-          <p>AGE : 20 Yrs/ Male</p>
+          <p>AGE : 21 Yrs/ Male</p>
           <p>meetmayankcv@gmail.com</p>
           <h6>
             <p>Know More</p><a href="#"></a>
@@ -686,15 +686,15 @@
     <div class="timeline">
       <div class="container left">
         <div class="content">
-          <h2> 7 Dec 2002</h2>
-          <p>On this day , a small baby was born in Bhubaneshwar ,Odisha. Later on She became a Genius Hardworking
+          <h2> DOB</h2>
+          <!-- <p>On this day , a small baby was born in Bhubaneshwar ,Odisha. Later on She became a Genius Hardworking
              &
             efficient worker for her carrer.She has undergone various Projects for her skill development and Today
              She
             is the Owner of this Great Project , and She's doing absolutely
             perfect in her field of Interests.
             Also being motivation for others , She has Motivated her Team very well to complete the task smoothly.
-          </p>
+          </p> -->
         </div>
       </div>
 
@@ -702,11 +702,11 @@
       <div class="container right">
         <div class="content">
           <h2>13 Sep 2001</h2>
-          <p><em>This day is the most memorable day for me . Birthday !! Yeaah it's ofcourse a reason but another
+          <!-- <p><em>This day is the most memorable day for me . Birthday !! Yeaah it's ofcourse a reason but another
              most
               important reason is that I got my better half on my birthday , my most precious gift ever .. I found
                My Love
-              of my Life .</em> <br>
+              of my Life .</em> <br> -->
             On this day Mayank was Born in Bokaro Steel City , Jharkhand . Later completed his
             studies in his hometown itself till Secondary schooling . Learnt various skills and used here to make 
             it
@@ -790,8 +790,8 @@
     <div id="s" class="zigZag">
       <div class="roww">
         <div class="C66">
-          <h1 class="xlarge-font"><b>Susneha</b></h1>
-          <h1 class="large-font" style="color:rgb(255, 0, 149);"><b>Saina !</b></h1>
+          <h1 class="xlarge-font"><b>Mayank</b></h1>
+          <h1 class="large-font" style="color:rgb(255, 0, 149);"><b>MK !</b></h1>
           <p><span style="font-size:36px">Live like a pro.</span> Just Live like a Pro as our CEO does , Her mind
             blowing Experiences and Expertised Advise make our Firm rise & Grow more . We are Thankful to Her.</p>
           <button class="button">Follow</button>
@@ -980,7 +980,7 @@
 
   <div class="cpyri8">
     <p>All rights Reserved by One Stop ShopIn<br> <span>Copyright@2022</span></p>
-    <a class="pp" href="http://127.0.0.1:5500/Project/pr-privacy.html"> Privacy Policy</a>
+    <a class="pp" href="pr-privacy.html"> Privacy Policy</a>
   </div>
 
 
