--- a/PR-contact.html
+++ b/PR-contact.html
@@ -270,13 +270,13 @@
 
 
     <div id="navbar" class="topnav">
-      <a href="http://127.0.0.1:5500/Project/home.html"><i class="fa fa-fw fa-stop"></i> One Stop ShopIn</a>
+      <a href="index.html"><i class="fa fa-fw fa-stop"></i> One Stop ShopIn</a>
       <div id="Links">
-        <a href="http://127.0.0.1:5500/Project/home.html" target="_blank"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="http://127.0.0.1:5500/Project/PR%20about.html" target="_blank"><i class="fa fa-fw fa-user"></i>
+        <a href="index.html" target="_blank"><i class="fa fa-fw fa-home"></i> Home</a>
+        <a href="PR about.html" target="_blank"><i class="fa fa-fw fa-user"></i>
           About</a>
-        <a href="http://127.0.0.1:5500/Project/prod.html"><i class="fa fa-fw fa-wrench"></i> Services</a>
-        <a href="http://127.0.0.1:5500/Project/pr-FAQ.html" target="_blank"><i class="fa fa-fw fa-question"></i>
+        <a href="prod.html"><i class="fa fa-fw fa-wrench"></i> Services</a>
+        <a href="pr-FAQ.html" target="_blank"><i class="fa fa-fw fa-question"></i>
           FAQ's</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -329,7 +329,7 @@
             <input type="text" name="subject" placeholder="Enter Subject/Topic here"  required>
             <label for="mg">Message</label>
             <textarea id="sub" name="message" placeholder="Write something..." style="height:170px" ></textarea>
-            <input type="hidden" name="_next" value=" http://127.0.0.1:5500/Project/thanks.html">
+            <input type="hidden" name="_next" value="thanks.html">
             <button class="btn1" onclick="disp()">Submit</button>
           </form>
         </div>
@@ -364,7 +364,7 @@
 
     <div class="cpyri8">
       <p>All rights Reserved by One Stop ShopIn <br> <span>Copyright@2022</span></p>
-      <a class="pp" href="http://127.0.0.1:5500/Project/pr-privacy.html"> Privacy Policy</a>
+      <a class="pp" href="pr-privacy.html"> Privacy Policy</a>
     </div>
 
 
