--- a/disc coupons.html
+++ b/disc coupons.html
@@ -161,11 +161,11 @@
 <body>
 
     <div class="icon-bar">
-        <a href="http://127.0.0.1:5500/Project/home.html" class="home"><i class="fa fa-home"></i></a>
+        <a href="index.html" class="home"><i class="fa fa-home"></i></a>
         <a href="#" class="login"><i class="fa fa-user"></i></a>
-        <a href="http://127.0.0.1:5500/Project/PR%20about.html" class="about"><i class="fa fa-desktop"></i></a>
-        <a href="http://127.0.0.1:5500/Project/pr-FAQ.html" class="faq"><i class="fa fa-question"></i></a>
-        <a href="http://127.0.0.1:5500/Project/PR-contact.html" class="contact"><i class="fa fa-phone"></i></a>
+        <a href="PR about.html" class="about"><i class="fa fa-desktop"></i></a>
+        <a href="pr-FAQ.html" class="faq"><i class="fa fa-question"></i></a>
+        <a href="PR-contact.html" class="contact"><i class="fa fa-phone"></i></a>
     </div>
 
 
@@ -294,7 +294,7 @@
 
     <div class="cpyri8">
         <p>All rights Reserved by One Stop ShopIn <br> <span>Copyright@2022</span></p>
-        <a class="pp" href="http://127.0.0.1:5500/Project/pr-privacy.html"> Privacy Policy</a>
+        <a class="pp" href="pr-privacy.html"> Privacy Policy</a>
     </div>
 </body>
 
