--- a/error.html
+++ b/error.html
@@ -149,8 +149,8 @@
                 problem?
             </p>
             <div class="btns">
-                <a href="http://127.0.0.1:5500/Project/home.html">return home</a>
-                <a href="http://127.0.0.1:5500/Project/PR-contact.html">report problem</a>
+                <a href="index.html">return home</a>
+                <a href="PR-contact.html">report problem</a>
             </div>
         </div>
     </div>
