--- a/login.html
+++ b/login.html
@@ -143,10 +143,10 @@
 
 <body>
   <div id="navbar">
-    <a href="http://127.0.0.1:5500/Project/home.html"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="http://127.0.0.1:5500/Project/PR%20about.html"><i class="fa fa-fw fa-user"></i> About</a>
-    <a href="http://127.0.0.1:5500/Project/pr-FAQ.html"><i class="fa fa-fw fa-question"></i> FAQ's</a>
-    <a href="http://127.0.0.1:5500/Project/PR-contact.html"><i class="fa fa-fw fa-phone"></i> Contact</a>
+    <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="PR about.html"><i class="fa fa-fw fa-user"></i> About</a>
+    <a href="pr-FAQ.html"><i class="fa fa-fw fa-question"></i> FAQ's</a>
+    <a href="PR-contact.html"><i class="fa fa-fw fa-phone"></i> Contact</a>
   </div>
 
   <div class="bg-img">
@@ -170,9 +170,9 @@
       <span>Remember Me</span><br><br>
       <input type="submit" value="Reset" onclick="clearFunc()" class="btn" id="btn1">
       <input type="submit" value="Login" class="btn" id="btn2" onClick="login()">
-      <h6>Forgot Password ? <a href="http://127.0.0.1:5500/Project/reset.html" target="_blank">Reset Now
+      <h6>Forgot Password ? <a href="reset.html" target="_blank">Reset Now
           !</a></h6>
-      <h6>Don't have an Account ? <a href="http://127.0.0.1:5500/Project/register.html" target="_blank">Register Now
+      <h6>Don't have an Account ? <a href="register.html" target="_blank">Register Now
           !</a></h6>
       <!-- <button type="submit" class="btn">Login</button> -->
 
