--- a/pr-FAQ.html
+++ b/pr-FAQ.html
@@ -127,11 +127,11 @@
 
 <body>
     <div id="Sidebar" class="sidenav">
-        <a href="http://127.0.0.1:5500/Project/home.html" id="home"><i class="fa fa-fw fa-home"></i>Home</a>
-        <a href="http://127.0.0.1:5500/Project/PR%20about.html" id="about"><i class="fa fa-fw fa-user"></i>About</a>
-        <a href="http://127.0.0.1:5500/Project/disc%20coupons.html" id="disc"><i
+        <a href="index.html" id="home"><i class="fa fa-fw fa-home"></i>Home</a>
+        <a href="PR about.html" id="about"><i class="fa fa-fw fa-user"></i>About</a>
+        <a href="disc coupons.html" id="disc"><i
                 class="fa fa-fw fa-rupee"></i>Coupons</a>
-        <a href="http://127.0.0.1:5500/Project/PR-contact.html" id="contact"><i
+        <a href="PR-contact.html" id="contact"><i
                 class="fa fa-fw fa-phone"></i>Contact</a>
     </div>
 
@@ -177,14 +177,14 @@
                 till then Offers are same for every new users.</p>
         </div>
     </div>
-    <div id="rbox">Website<a href="http://127.0.0.1:5500/Project/pr-disc.html"> Disclaimer</a></div>
-    <div id="rbox"><a href="http://127.0.0.1:5500/Project/pr-T&C.html"> Terms & Conditions</a></div>
+    <div id="rbox">Website<a href="pr-disc.html"> Disclaimer</a></div>
+    <div id="rbox"><a href="pr-T&C.html"> Terms & Conditions</a></div>
 
 
 
     <div class="cpyri8">
         <p>All rights Reserved by One Stop ShopIn <br> <span>Copyright@2022</span></p>
-        <a class="pp" href="http://127.0.0.1:5500/Project/pr-privacy.html"> Privacy Policy</a>
+        <a class="pp" href="pr-privacy.html"> Privacy Policy</a>
     </div>
 
     <script>
