--- a/prod.html
+++ b/prod.html
@@ -195,24 +195,24 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
     <ul id="myMenu">
-      <li><a href="http://127.0.0.1:5500/Project/home.html"> ShopIn Home</a></li>
+      <li><a href="index.html"> ShopIn Home</a></li>
       <li><a href="#kids">Kids Fashion</a></li>
       <li><a href="#men">Men Fashion</a></li>
       <li><a href="#women">Women Fashion</a></li>
       <li><a href="#mob">Mobiles</a></li>
       <li><a href="#lap">Laptops</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/error.html">Tablet</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/error.html">Grocery</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/error.html">Kitchen</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/error.html">Furniture</a></li>
+      <li><a href="error.html">Tablet</a></li>
+      <li><a href="error.html">Grocery</a></li>
+      <li><a href="error.html">Kitchen</a></li>
+      <li><a href="error.html">Furniture</a></li>
       <li><a href="#tv">TV & Speakers</a></li>
       <li><a href="#un">Underwear</a></li>
       <li><a href="#ft">Footwear</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/coming.html">ONS+ Plus</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/PR%20about.html">About US</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/disc%20coupons.html">Top Offers</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/PR-contact.html">Contact</a></li>
-      <li><a href="http://127.0.0.1:5500/Project/pr-FAQ.html">Need Help ? FAQ</a></li>
+      <li><a href="coming.html">ONS+ Plus</a></li>
+      <li><a href="PR about.html">About US</a></li>
+      <li><a href="disc coupons.html">Top Offers</a></li>
+      <li><a href="PR-contact.html">Contact</a></li>
+      <li><a href="pr-FAQ.html">Need Help ? FAQ</a></li>
       <li></li>
     </ul>
   </div>
@@ -810,7 +810,7 @@
 
   <div class="cpyri8">
     <p>All rights Reserved by One Stop ShopIn <br> <span>Copyright@2022</span></p>
-    <a class="pp" href="http://127.0.0.1:5500/Project/pr-privacy.html"> Privacy Policy</a>
+    <a class="pp" href="pr-privacy.html"> Privacy Policy</a>
   </div>
 
   <script>
