--- a/register.html
+++ b/register.html
@@ -152,12 +152,12 @@
 
 
     <div id="Sidebar" class="sidenav">
-        <a href="http://127.0.0.1:5500/Project/home.html" target="_blank" id="home"><i
+        <a href="index.html" target="_blank" id="home"><i
                 class="fa fa-fw fa-home"></i>Home</a>
-        <a href="http://127.0.0.1:5500/Project/PR%20about.html" target="_blank" id="about"><i
+        <a href="PR about.html" target="_blank" id="about"><i
                 class="fa fa-fw fa-user"></i>About</a>
-        <a href="http://127.0.0.1:5500/Project/pr-FAQ.html" id="projects"><i class="fa fa-fw fa-question"></i>FAQ's</a>
-        <a href="http://127.0.0.1:5500/Project/PR-contact.html" id="contact"><i
+        <a href="pr-FAQ.html" id="projects"><i class="fa fa-fw fa-question"></i>FAQ's</a>
+        <a href="PR-contact.html" id="contact"><i
                 class="fa fa-fw fa-phone"></i>Contact</a>
     </div>
 
@@ -189,12 +189,12 @@
 
 
             <input type="checkbox" name="me" id="me">
-            <h6> I Agree <a href="http://127.0.0.1:5500/Project/pr-T&C.html" target="_blank"> Terms & Conditions</a>
+            <h6> I Agree <a href="pr-T&C.html" target="_blank"> Terms & Conditions</a>
             </h6>
 
             <input type="submit" value="Reset" onClick="clearFunc()" class="btn" id="btn1">
             <input type="submit" value="SignUp" class="btn" id="btn2" onclick="registration()">
-            <h6>Already have an Account ? <a href="http://127.0.0.1:5500/Project/login.html" target="_blank">Login Here
+            <h6>Already have an Account ? <a href="login.html" target="_blank">Login Here
                     !</a></h6>
         </form>
     </div>
@@ -251,7 +251,7 @@
             else {
                 alert('Thank You for Creating your account & You are Redirecting to our Login Website');
 
-                window.location = "http://127.0.0.1:5500/Project/login.html";
+                window.location = "login.html";
             }
         }
         function clearFunc() {
