--- a/reset.html
+++ b/reset.html
@@ -214,7 +214,7 @@
                 <input type="number" name="" required="">
                 <label>Mobile No:</label>
             </div>
-            <a href="http://127.0.0.1:5500/Project/error.html">
+            <a href="error.html">
                 <span></span>
                 <span></span>
                 <span></span>
