Newly identified bugs fixed !

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a href="http://127.0.0.1:5500/Project/coming.html">
+      <a href="coming.html">
         <img
           src="https://thumbs.dreamstime.com/b/summer-fever-neon-signs-style-text-vector-sign-design-can-be-used-posters-banners-other-social-media-etc-179859748.jpg"
           alt="Forest" width="600" height="400">
@@ -423,7 +423,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a href="http://127.0.0.1:5500/Project/disc%20coupons.html">
+      <a href="disc coupons.html">
         <img src="https://image.freepik.com/free-vector/new-arrivals-neon-signs-style-text_118419-784.jpg"
           alt="Mountains" width="600" height="400">
       </a>
@@ -433,7 +433,7 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a href="http://127.0.0.1:5500/Project/PR%20about.html#s">
+      <a href="PR about.html">
         <img src="https://th.bing.com/th/id/OIP.rdLLlGtiTwGR6fEcdtu_mwHaHa?pid=ImgDet&w=800&h=800&rs=1"
           alt="Northern Lights" width="600" height="400">
       </a>
